objects/LAT_Visit_Task__c.object
<CustomObject>
    <fields>
        <fullName>LAT_TaskId__c</fullName>
        <label>Task</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Task__c</fullName>
        <formula>HYPERLINK(LAT_TaskId__c, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Visita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visita</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipName>Promotional_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Atividad</label>
    <nameField>
        <label>Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atividades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>